Small navbar fix on Firefox

--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -33,7 +33,7 @@
     .navbar,
     .navbar-default {
         background-image: url("../assets/img/header-bg.svg");
-        background-size: auto 103%;
+        background-size: auto 105%;
         align-items: center;
         width: 100%;
         height: 80px;
